[package]
name = "das-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ["full", "tracing"] }
thiserror = "1.0.56"
clap = { version = "4.4.14", features = ["derive"] }
tracing = {version = "0.1.40", features = ["log"]}
env_logger = "0.10.1"
reqwest = { version = "0.11.23", features = ["json"] }
serde_json = "1.0"
serde_derive = "1.0.190"
serde = "1.0.136"
rand = "0.8.5"
tokio-util = "0.7.10"
assert-json-diff = "2.0.2"
regex = "1.10.2"
async-trait = "0.1.77"
spl-account-compression = "0.3.0"
solana-client = "~1.16"
solana-program = "~1.16"
solana-sdk = "~1.16"
spl-concurrent-merkle-tree = "0.2.0"
anchor-lang = "0.29.0"
mockall = "0.11.4"
schemars = "0.8.6"